[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ut-coda"
version = "0.0.1"
authors = [
  { name="Arthur King Zhang", email="arthurz@cs.utexas.edu" },
]
description = "Official Dataset Devkit for UT CODa"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "keywords", "license"]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"